style.css
/* ... */
.slider-text{
  font-size: 1.4rem;
  font-weight: 500;
  margin-bottom: 30px;
  animation: fadeSlide 2.5s ease-out forwards;
}

/*slider Button*/
.owl-prev, .owl-next{
  position: absolute;
  top: 50%;
  width: 50px !important;
  height: 50px !important;
  font-size: 35px !important;
  place-items: center;
  border-radius: 50% !important;
  background-color: #87CA9C;
  display: grid;
  margin-top: -30px !important;
}

.slider-content a{
  font-size: 1.4rem !important;
}

.owl-prev {
  left:0;
}

.owl-next {
  right:0;
}

/*About Us*/

.aboutus, .services, .feedback{
  opacity: 0;
  transform: translateY(50px);
  transition: opacity 1s ease-out, transform 2s ease-out;
}

.aboutus-animation{
  opacity: 1;
  transform: translateY(0);
}

.aboutus img{
  width: 95%;
  height: 100%;
}

.aboutus .about-content{
  position: relative;
}

.aboutus::after {
  content: "";
  display: table;
  clear: both;
}

.aboutus-title{
  font-weight: 600;
  color: black;
  text-align: center;
  font-family: "Poppins", serif;
}

/*MAIN TILE FONT SIZE IN EVERY SECTION*/
.aboutus-title h2, .services-title h2, .feedback-title h2{
  font-family: "Poppins", serif;
  font-size: 2.6rem;
  font-weight: 600;
}

.content p{
  text-align: justify;
  font-size: 1.25rem;
  padding-top: 10px;
  font-family: "Inter", sans-serif;
}

.pt-6{
  padding-top: 80px;
}

.mb-6{
  padding-bottom: 80px;
}

.number-section{
  background-color: #87CA9C;
  z-index: 2;
  padding: 15px 26px;
}

.number {
  margin-left: 20px;
}

.number-section h3{
  font-size: 1.5rem;
  font-weight: 600;
  font-family: "Poppins", serif;
}

.number-section h1{
  font-size: 2.4rem;
  font-weight: 600;
  font-family: "Roboto Slab", serif !important;
}

.mt-n130{
  margin-top: 6px;
}



/*Services*/
.service-icon img{
  width: 100%;
  height: auto;
  border-radius: 10px !important;
}

#Services{
  background-color: whitesmoke;
}

.service-box{
  background-color: #87CA9C;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-bottom: 20px;
  opacity: 0;
  transform: translateY(50px);
  transition: opacity 1s ease-out, transform 1s ease-out;
}

.service-box-show{
  opacity: 1;
  transform: translateY(0);
}

/*SERVICE AND FEEDBACK TITLE FONT SIZE*/
.services-title h4, .feedback-title h4{
  font-size: 1.6rem;
  margin: 10px 0px 30px 0px;
}

.service-title h3{
  margin-top: 20px !important;
  
}

.service-content p{
  font-family: "Inter", sans-serif;
  font-size: 1.24rem;
}

.services{
  background-color: whitesmoke;
  padding-bottom: 50px;
}

/*feedback*/

.pt-50{
  padding-top: 50px;
}

.feedback-main{
  /*box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.15);*/
}

.feedback-box{
  background-color: whitesmoke;
  padding: 30px;
  border-radius: 20px;
  max-width: 1000px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
}

.feedback-content p{
  font-family: "Inter", sans-serif;
  font-size: 1.28rem;
}

.feedback-image img{
  width: 80px;
  height: 80px;
  border-radius: 50%;
  text-align: center;
}

.feedback-image{
  text-align: center;
}

/*footer*/
.footer{
  background-color: #87CA9C;
  padding-top: 20px;
  color: white;
  text-align: center;
  margin-top: 50px; 
  padding-bottom: 10px;
}

.footer .footer-brand{
  color: white;
  margin-bottom: 30px;
  display: inline-block;
}

.footer-top{
  margin-bottom: 40px;
}

.bottom-footer{
  border-top: 1px solid white;
  padding-top: 20px; 
}

.footer .social-links a{
  color: #87CA9C;
  font-size: 24px;
  margin-left: 5px;
  background-color: whitesmoke;
  border-radius: 50%;
  padding: 10px;
  display: inline-flex;
  text-decoration: none;
  align-items: center;
  justify-content: center;
}


/*service page*/
.container-fluid {
  padding: 0;
  margin: 0;
  position: relative;
  width: 100vw;
  height: 320px;
  background-color: #87CA9C;
  z-index: 1;
}

.pt-7{
  padding-top: 120px;
}

.navbar_service{
  background-color: whitesmoke !important;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 1000;
}

.service-page img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.small-box-container{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -80px;
  margin-bottom: 50px;
}

.small-box{
  background-color: whitesmoke;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 10 10 10px rgba(0, 0, 0, 0.452);
  width: 85%;
  text-align: center;
  z-index: 2;
}

.service-page h1, .blog-page h1{
  font-size: 2.8rem;
  font-weight: 600;
  font-family: "Poppins", serif;
  animation: fadeSlide 2.5s ease-out forwards;

}

.service-page p, .blog-page p{
  font-size: 1.5rem;
  text-align: center;
  font-family: "Inter", sans-serif;
  animation: fadeSlide 2.5s ease-out forwards;
}

.number-circle {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: #87CA9C;
  color: white;
  display: inline-block;
  line-height: 50px;
  text-align: center;
  margin-bottom: 10px;
}

.steps-show{
  opacity: 1;
  transform: translateY(0);
}

.steps h2{
  font-family: "Roboto Slab", serif;
}

.steps .short-paragraph{
  font-family: "Inter", sans-serif;
  font-size: 1.25rem;
}

.small-box p, .service-page-content p{
  font-family: "Inter", sans-serif;
  font-size: 1.25rem;
  padding-bottom: 10px;
}

.service-title h3, .Additional_title{
  font-family: "Roboto Slab", serif;
}

.services{
  background-color: white;
}


/*Blog Page*/
.blog-page{
  padding: 50px;
  height: 220px;
}

.blog-page h1{
  margin-top: 55px;
}

.blog-container{
  background-color: whitesmoke;
  width: 100%;
}

.blog-main{
  padding-top: 30px;
  width: 100%;
}

.blog-card{
  max-width: 795px;
  width: 100%;
  border: 1px solid #ddd;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.blog-card img{
  height: 350px;
  object-fit: cover;
}

.blog-card .card-img-top {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.blog-card .card-body h2, .card-body h5 {
  font-family: "Poppins", serif;
}
/* ... */

